--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InsectCatalog - Catálogo de Insetos</title>
+    <title>Phylum - Catálogo de Insetos</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,8 +23,8 @@
                     <div class="d-flex align-items-center">
                         <i class="bi bi-bug-fill fs-1 me-3 text-warning"></i>
                         <div>
-                            <h1 class="mb-0 fw-bold">InsectCatalog</h1>
-                            <p class="mb-0 fs-5 opacity-75">Descubra o fascinante mundo dos insetos</p>
+                            <h1 class="mb-0 fw-bold">Phylum</h1>
+                            <p class="mb-0 fs-5 opacity-75">Descubra o mundo dos insetos</p>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">
                         <i class="bi bi-bug-fill me-2 text-warning"></i>
-                        InsectCatalog
+                        Phylum
                     </h5>
                     <p class="text-light opacity-75">
                         Explore e aprenda sobre a diversidade fascinante do mundo dos insetos através do nosso catálogo interativo.
@@ -140,12 +140,8 @@
                             </a>
                         </li>
                         <li class="mb-2">
-                            <i class="bi bi-telephone me-2"></i>
-                            <span class="text-light opacity-75">(11) 9999-9999</span>
-                        </li>
-                        <li class="mb-2">
                             <i class="bi bi-geo-alt me-2"></i>
-                            <span class="text-light opacity-75">São Paulo, SP - Brasil</span>
+                            <span class="text-light opacity-75">Uberaba, MG - Brasil</span>
                         </li>
                     </ul>
                 </div>
@@ -154,21 +150,21 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <p class="mb-0 text-light opacity-75">
-                        © 2024 InsectCatalog. Todos os direitos reservados.
+                        © 2025 Phylum. Todos os direitos reservados.
                     </p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <div class="social-links">
-                        <a href="#" class="text-light me-3 fs-5 opacity-75 hover-opacity-100">
+                        <a href="https://www.facebook.com/fazuonline" class="text-light me-3 fs-5 opacity-75 hover-opacity-100">
                             <i class="bi bi-facebook"></i>
                         </a>
-                        <a href="#" class="text-light me-3 fs-5 opacity-75 hover-opacity-100">
+                        <a href="https://x.com/fazuonline" class="text-light me-3 fs-5 opacity-75 hover-opacity-100">
                             <i class="bi bi-twitter"></i>
                         </a>
-                        <a href="#" class="text-light me-3 fs-5 opacity-75 hover-opacity-100">
+                        <a href="https://www.instagram.com/fazuonline/" class="text-light me-3 fs-5 opacity-75 hover-opacity-100">
                             <i class="bi bi-instagram"></i>
                         </a>
-                        <a href="#" class="text-light fs-5 opacity-75 hover-opacity-100">
+                        <a href="https://www.youtube.com/c/FazuVirtual" class="text-light fs-5 opacity-75 hover-opacity-100">
                             <i class="bi bi-youtube"></i>
                         </a>
                     </div>
