--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
         </div>
     </header>
 
+    <section id="about" class="info-section">
+    <h2>A Proposta do Phylum - Catálogo de Insetos</h2>
+        <p>
+            O Phylum - Catálogo de Insetos é uma ferramenta interativa desenvolvida com o objetivo de demonstrar a aplicação prática da classificação morfológica de insetos.
+        </p>
+
+        <h3>Como Funciona?</h3>
+        <p>
+            O catálogo apresenta uma galeria de espécies, cada uma com suas características morfológicas detalhadas (Ordem, Aparelho Bucal, Tipos de Asas, Tipos de Pernas, Cercos e Tipos de Antenas).
+        </p>
+        <ul>
+            <li>Filtrar a galeria para visualizar apenas os insetos que correspondem à combinação de características selecionadas.</li>
+            <li>Entender visualmente a relação entre a morfologia e a taxonomia.</li>
+        </ul>
+
+        <h3>Objetivo Educacional</h3>
+        <p>
+            Este projeto serve como um recurso didático, ilustrando de forma clara e interativa os conceitos de Taxonomia, Morfologia Externa e o processo de identificação baseado em características distintas.
+        </p>
+    </section>
+
+
+
     <!-- Main Content -->
     <main class="container my-5">
         <!-- Filters Section -->
